patched timeStringToFloat function to momentjs

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</div>
 			<div class="modal-body">
 				<p>
-					Use Google Chrome or Firefox for optimal results. Lets be honest here... Edge or IE are crap.
+					Use Google Chrome or Firefox for optimal results. Let's be honest here... Edge or IE are crap.
 				</<p>
 				<p>
 					Set this page as your browser startup page or pin the tab to automatically start counting when you open your browser.<br><br>
@@ -381,7 +381,7 @@
 							</div>
 						</div>
 						<div class="form-inline">
-							<button type="button" class="btn btn-outline-secondary ml-auto mr-2 py-1 px-2" style="font-size: 0.5rem;" data-toggle="modal" data-target="#modaledithistory"><i class="fas fa-edit"></i></button>
+							<button type="button" class="btn btn-outline-secondary ml-auto mr-2 py-1 px-2" style="font-size: 0.6rem;" data-toggle="modal" data-target="#modaledithistory"><i class="fas fa-edit"></i></button>
 							<div id="historycontainer" class="collapse my-3 mr-2">
 								<div id="history" class="w-100"></div>
 							</div>
@@ -422,7 +422,7 @@
 							<div class="col my-3">
 								<div class="btn-group" role="group">
 									<button type="button" class="btn btn-lg btn-primary px-4 py-3" onclick="reset_break()" style="border-radius: 1.5rem 0 0 1.5rem !important;" data-toggle="tooltip" data-placement="bottom" title="Resets the break time."><i class="fal fa-redo"></i></button>
-									<button type="button" class="btn btn-lg btn-primary px-4 py-3" onclick="add_break(0.083)" style="border-radius: 0 !important;" data-toggle="tooltip" data-placement="bottom" title="Adds 5min of break time."><i class="fal fa-plus"></i> 5min</button>
+									<button type="button" class="btn btn-lg btn-primary px-4 py-3" onclick="add_break(0.084)" style="border-radius: 0 !important;" data-toggle="tooltip" data-placement="bottom" title="Adds 5min of break time."><i class="fal fa-plus"></i> 5min</button>
 									<button type="button" class="btn btn-lg btn-primary px-4 py-3" onclick="add_break(0.5)" style="border-radius: 0 !important;" data-toggle="tooltip" data-placement="bottom" title="Adds 30min of break time."><i class="fal fa-plus"></i> 30min</button>
 									<button type="button" class="btn btn-lg btn-primary px-4 py-3" onclick="break_counter()" id="break_counter_btn" style="border-radius: 0 1.5rem 1.5rem 0 !important;" data-toggle="tooltip" data-placement="bottom" title="Click once to start the break time counter. Click again to stop it and add the break time. If you don't click the button a second time, no time will be added."><i class="fal fa-stopwatch"></i> Start</button>
 								</div>						
