Bugfix floatToTimeString not being able to handle negative time properly - default break time now changing when break not manually modified and updating endtime accordingly

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20200918.1</span> <br>
+					Version: <span id="currentappversion">20201015.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -275,10 +275,7 @@
 				</div>
 				<div class="col-lg-10 py-1 px-4">
 					<p>
-						Did some optimization and small UI fixes.<br>
-						<br>
-						<b>A new feature is introduced.</b><br>
-						Click the edit button next to your time history to discover it!
+						Ironed out some bugs, background code received more consitancy in function usage.
 					</p>
 				</div>
 			</div>
