--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20201015.1</span> <br>
+					Version: <span id="currentappversion">20201021.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -57,9 +57,28 @@
 				<p>
 					<h4>Import / export / delete</h4>
 					If you delete your browser data the history will reset. You can export and import your data.<br><br>
-					<button class="btn btn-outline-secondary btn-sm" id="exportHistory" onclick="exportHistory()">Export History</button >
-					<button class="btn btn-outline-secondary btn-sm" id="importHistory">Import History</button >
-					<button class="btn btn-outline-secondary btn-sm" id="deleteHistory" onclick="deleteHistory()">Delete History</button >
+					<div class="container">
+						<div class="row">
+							<div class="col-sm-auto justify-content-center text-center">
+								<button class="btn btn-outline-secondary btn-sm" id="exportHistory" onclick="exportHistory()">Export History</button>
+							</div>
+							<div class="col-sm justify-content-center text-center">
+								<button class="btn btn-outline-secondary btn-sm" id="importHistory">Import History</button>
+							</div>
+							<div class="col-sm justify-content-center text-center">
+								<button class="btn btn-outline-secondary btn-sm" id="deleteHistory" onclick="deleteHistory()">Delete History</button>
+							</div>
+							<div class="col-sm-auto justify-content-center text-center">
+								<a class="btn btn-outline-secondary btn-sm" target="_blank" href="sample_data/working_history_sample_data.json">Download Sample Data</a>
+							</div>
+						</div>
+					</div>
+					<br>
+					You can download the example as a '.json' file and import it into the application.
+					<!--<button class="btn btn-outline-secondary btn-sm" id="exportHistory" onclick="exportHistory()">Export History</button>
+					<button class="btn btn-outline-secondary btn-sm" id="importHistory">Import History</button>
+					<button class="btn btn-outline-secondary btn-sm" id="deleteHistory" onclick="deleteHistory()">Delete History</button>
+					<a class="btn btn-outline-secondary btn-sm" target="_blank" href="sample_data/working_history_sample_data.json">Download Sample Data</a>-->
 					<a id="exportHistoryLink" style="display: none;">Export</a>
 					<input type="file" id="importFile" accept=".json" style="display:none" />
 				</p>
@@ -227,7 +246,7 @@
 </div>
 
 <div id="modaledithistory" class="modal fade">
-	<div class="modal-dialog modal-lg">
+	<div class="modal-dialog modal-xl">
 		<div class="modal-content px-2">
 			<div class="modal-header">
 				<h2>Edit time history</h2>
@@ -251,13 +270,40 @@
 						<th class="text-center">Overtime</th>
 						<th class="text-center">Total Work Time</th>
 						<th class="text-center">Start Time</th>
-						<th class="text-center px-5">Edit</th>
+						<th class="text-center">Hour Schedule</th>
+						<th class="text-center">Edit</th>
 					  </tr>
 					</thead>
 					<tbody id="edit_history_table_body">
 					</tbody>
 				  </table>
 				</div>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div id="modalreporting" class="modal fade">
+	<div class="modal-dialog modal-xl" style="width:150%">
+		<div class="modal-content px-2">
+			<div class="modal-header">
+				<h2>Reporting</h2>
+				<button type="button" class="btn float-right" data-dismiss="modal"><i class="fas fa-times float-right"></i></button>
+			</div>
+			<div class="modal-body">
+				<div class="form-group">
+					<div class="input-group">
+						<label class="col-form-label" for="graphdatasetlength_value">Number of points to display: </label>
+						<input type="number" name="graphdatasetlength_value" id="graphdatasetlength_value" class="form-control col-sm-2 mx-1" value="999" min="1" max="999" onchange="initGraphs()">
+					</div>
+				</div>
+				<div id="OvertimeDec_div"></div>
+				<div id="StartDec_div"></div>
+				<div id="TotalDec_div"></div>
+				<div id="TotalNoBreakDec_div"></div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -275,7 +321,7 @@
 				</div>
 				<div class="col-lg-10 py-1 px-4">
 					<p>
-						Ironed out some bugs, background code received more consitancy in function usage.
+						Added the reporting feature in the lower right corner. Go check it out!
 					</p>
 				</div>
 			</div>
@@ -445,9 +491,10 @@
 		</div>
 		<div class="col d-flex justify-content-end">
 			<div class="btn-group align-self-center" role="group">
-				<button type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 1.5rem 0 0 1.5rem !important;" data-toggle="modal" data-target="#modalabout"><i class="fas fa-info"></i></button>
-				<button type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 0 !important;" data-toggle="modal" data-target="#modalinfo"><i class="fas fa-lightbulb"></i></button>
-				<button type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 0 1.5rem 1.5rem 0 !important;" data-toggle="modal" data-target="#modalsettings"><i class="fas fa-cog"></i></button>
+				<button title="Reporting" type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 1.5rem 0 0 1.5rem !important;" data-toggle="modal" data-target="#modalreporting"><i class="fas fa-chart-line"></i></button>
+				<button title="About" type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 0 !important;" data-toggle="modal" data-target="#modalabout"><i class="fas fa-info"></i></button>
+				<button title="Info" type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 0 !important;" data-toggle="modal" data-target="#modalinfo"><i class="fas fa-lightbulb"></i></button>
+				<button title="Settings" type="button" class="btn btn-outline-secondary py-1 px-4" style="height: 50%; font-size: 1.2rem; border-radius: 0 1.5rem 1.5rem 0 !important;" data-toggle="modal" data-target="#modalsettings"><i class="fas fa-cog"></i></button>
 			</div>			
 		</div>
 	</div>
@@ -475,4 +522,6 @@
 </script>
 <script src="js/javascript.js"></script>
 <script src="js/editable_table.js"></script>
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+<script src="js/graphs.js"></script>
 </html>
