added breaktime graph - fixed bug totalovertime not being calculated correctly

--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
 				<div id="StartDec_div"></div>
 				<div id="TotalDec_div"></div>
 				<div id="TotalNoBreakDec_div"></div>
+				<div id="BreakDec_div"></div>
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
@@ -516,12 +517,12 @@
 <!-- Custom Styles -->
 <link href="css/bootstrap_specific_style.css" rel="stylesheet">
 <!-- Moment.js -->
-<script src="js/moment.min.js"></script><!-- https://momentjs.com/docs -->
+<script type="text/javascript" src="js/moment.min.js"></script><!-- https://momentjs.com/docs -->
 <script>
 	moment().format();
 </script>
-<script src="js/javascript.js"></script>
-<script src="js/editable_table.js"></script>
+<script type="text/javascript" src="js/javascript.js"></script>
+<script type="text/javascript" src="js/editable_table.js"></script>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-<script src="js/graphs.js"></script>
+<script type="text/javascript"  src="js/graphs.js"></script>
 </html>
