fixed translation dutch word

--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
 						</div>
 						<div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="weeklyovertimeoption" name="weeklyovertimeoption" data-toggle="collapse" data-target="#divovertimeweekly">
-							<label class="custom-control-label" for="weeklyovertimeoption">Show weekly overtime saldo</label>
+							<label class="custom-control-label" for="weeklyovertimeoption">Show weekly overtime balance</label>
 						</div>
 						<div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="totalovertimeoption" name="totalovertimeoption" data-toggle="collapse" data-target="#divovertimetotal">
-							<label class="custom-control-label" for="totalovertimeoption">Show total overtime saldo</label>
+							<label class="custom-control-label" for="totalovertimeoption">Show total overtime balance</label>
 						</div>
 						<div class="custom-control custom-checkbox">
 							<input type="checkbox" class="custom-control-input" id="historyoption" name="historyoption" data-toggle="collapse" data-target="#historycontainer">
