added hourschedules pie chart

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 			<div class="modal-body">
 				<div class="form-group">
 					<div class="input-group">
-						<label class="col-form-label" for="graphdatasetlength_value">Number of points to display: </label>
+						<label class="col-form-label" for="graphdatasetlength_value">Number of points to display (starting today and going back): </label>
 						<input type="number" name="graphdatasetlength_value" id="graphdatasetlength_value" class="form-control col-sm-2 mx-1" value="999" min="1" max="999" onchange="initGraphs()">
 					</div>
 				</div>
@@ -312,7 +312,7 @@
 					<div id="DaysRegisteredGauge_div" style="display: inline-block;"></div>
 					<div id="AvgStarttimeGauge_div" style="display: inline-block;"></div>
 				</div>
-				<div id="OvertimeDays_div" style="width: 50%;"></div>
+				<div id="OvertimeDays_div" style="width: 50%;display: inline-block;"></div><div id="Hourschedules_div" style="width: 50%;display: inline-block;"></div>
 				<div id="OvertimeDec_div"></div>
 				<div id="StartDec_div"></div>
 				<div id="TotalDec_div"></div>
