added custom tooltips to graphs - fixed total and overtime calculations when window passes midnight into the next day

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 				<div class="form-group">
 					<div class="input-group">
 						<label class="col-form-label" for="graphdatasetlength_value">Number of points to display (starting today and going back): </label>
-						<input type="number" name="graphdatasetlength_value" id="graphdatasetlength_value" class="form-control col-sm-2 mx-1" value="999" min="1" max="999" onchange="initGraphs()">
+						<input type="number" name="graphdatasetlength_value" id="graphdatasetlength_value" class="form-control col-sm-2 mx-1" value="999" min="1" max="999" onchange="initGraphs(); drawGraphs();">
 					</div>
 				</div>
 				<p>
