added average stoptime as gauge to reporting

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
 				<div style="display: flex; justify-content: center;">
 					<div id="DaysRegisteredGauge_div" style="display: inline-block;"></div>
 					<div id="AvgStarttimeGauge_div" style="display: inline-block;"></div>
+					<div id="AvgStoptimeGauge_div" style="display: inline-block;"></div>
 				</div>
 				<div id="OvertimeDays_div" style="width: 50%;display: inline-block;"></div><div id="Hourschedules_div" style="width: 50%;display: inline-block;"></div>
 				<div id="OvertimeDec_div"></div>
