--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="modal-body">
 				<p>
 					Author: <a href="https://www.linkedin.com/in/sennejanssens/" target="_blank">Senne Janssens</a> ( Send me a message with feedback or suggestions ;) )<br>
-					Version: <span id="currentappversion">20201102.1</span> <br>
+					Version: <span id="currentappversion">20201117.1</span> <br>
 					Release notes: <a href="https://github.com/Lefky/lefky.github.io/commits/master" target="_blank">Check the master branch on Github</a>
 				</p>	
 			</div>
@@ -346,6 +346,11 @@
 				<div class="col-lg-10 py-1 px-4">
 					<p>
 						Added the reporting feature in the lower right corner. Go check it out!
+					</p>
+					<p>
+						Reporting now based on time range.<br>
+						Added average stoptime gauge to reporting.<br>
+						Added automatic landscape screen to reporting for mobile devices.
 					</p>
 				</div>
 			</div>
